I changed powered by to supported by

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <a href="https://www.instagram.com/topibrotech/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
         <a href="https://twitter.com/topibrotech" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
         <a href="https://www.linkedin.com/company/topibrotech" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-        <p class="w3-medium">Powered by <a href="https://www.topibrotech.com" target="_blank">Topibro Technologies Limited</a>
+        <p class="w3-medium">Supported by <a href="https://www.topibrotech.com" target="_blank">Topibro Technologies Limited</a>
         </p>
     </footer>
 
